# vla-autonomous-vehicles

./: .gitignore  README.md  pixi.toml
data/: README.md
hardware/: README.md
sim/: README.md
src/: README.md
src/asyncvla_interfaces/: CMakeLists.txt  package.xml
src/asyncvla_interfaces/msg/: ActionChunk.msg  CompressedObservation.msg  GoalSpec.msg
src/asyncvla_ros/: package.xml  setup.cfg  setup.py
src/asyncvla_ros/asyncvla_ros/: asyncvla_backend.py  asyncvla_controller_node.py  asyncvla_inference_node.py  goal_publisher_node.py
src/asyncvla_ros/launch/: asyncvla.launch.py
src/earthrover_vla_bringup/: CMakeLists.txt  package.xml
src/earthrover_vla_bringup/launch/: launch.py
src/earthrover_vla_description/: CMakeLists.txt  package.xml
src/earthrover_vla_description/urdf/: robot.xacro
src/earthrover_vla_interface/: package.xml  setup.cfg  setup.py
src/earthrover_vla_interface/earthrover_vla_interface/: vla_bridge_node.py
src/earthrover_vla_simulation/: CMakeLists.txt  package.xml
src/earthrover_vla_simulation/config/: bridge_parameters.yaml
src/earthrover_vla_simulation/launch/: sim.launch.py
src/earthrover_vla_simulation/urdf/: robot.gazebo  robot_sim.xacro
src/earthrover_vla_simulation/world_generation/: assets.py  layout.py  world_generator.py
src/earthrover_vla_simulation/worlds/: README.md  empty_office_hallway.sdf  empty_office_square.sdf  empty_world_cam.sdf  generated_world.sdf  unempty_office_hallway.sdf  unempty_office_square.sdf
src/earthrover_vla_simulation/worlds/generation_configs/: empty_world_cam.yaml  office_square.yaml
src/earthrover_vla_simulation/worlds/object_spawner/: assets.py  generator.py  layout.py
src/frodo_bringup/: driving.control.py  frodo_driver_node.py  rtsp_camera_node.py
(+9 files in other folders)
