<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>earthrover_vla_interface</name>
  <version>0.0.0</version>
  <description>Bridge between VLA and robot in sim or hardware</description>
  <maintainer email="lisa.yamamotto@gmail.com">Lisa</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>zenoh</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
